<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_from_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_civ_head_from"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/sample_photo"/>

        <TextView
            android:id="@+id/chat_txtv_message_content_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/chat_civ_head_from"
            android:text="@string/sample_chat"
            android:textSize="@dimen/text_med"
            android:textColor="@android:color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/chat_txtv_message_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/chat_civ_head_from"
            android:layout_below="@+id/chat_txtv_message_content_from"
            android:text="@string/sample_chat_status"
            android:textSize="12dp"
            android:layout_marginStart="8dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_to_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/chat_civ_head_to"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/sample_photo"/>

        <TextView
            android:id="@+id/chat_txtv_message_content_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/chat_civ_head_to"
            android:text="@string/sample_chat"
            android:textSize="@dimen/text_med"
            android:textColor="@android:color/black"
            android:textAlignment="textEnd"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/txtv_to_message_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/chat_civ_head_to"
            android:layout_below="@+id/chat_txtv_message_content_to"
            android:text="@string/sample_chat_status"
            android:textAlignment="textEnd"
            android:textSize="12dp"
            android:layout_marginEnd="8dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chat_layout_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">


        <TextView
            android:id="@+id/chat_view_location_textv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_location"
            android:textStyle="bold"
            android:textSize="@dimen/text_small"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center"/>

    </RelativeLayout>
</LinearLayout>
