<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfielActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_display_photo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/sample_photo"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sample_name"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_display_photo" />

    <TextView
        android:id="@+id/profile_display_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_display_name" />

    <Button
        android:id="@+id/profile_btn_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Send a Message"
        android:onClick="SendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_display_email" />

    <TabHost
        android:id="@+id/profile_tab_host"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn_send_message">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Main Service"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/profile_main_service"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_service"
                            android:textSize="@dimen/text_med"
                            android:textColor="@android:color/black"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"/>

                        <TextView
                            android:id="@+id/profile_other_services_textv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Other Services"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/profile_cg_other_services"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"/>

                        <TextView
                            android:id="@+id/profile_skills_txtv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Skills"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/profile_cg_skills"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"/>

                        <TextView
                            android:id="@+id/profile_work_experience_textv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Work Experiences"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>

                        <LinearLayout
                            android:id="@+id/profile_layout_list_work_experiences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <TextView
                            android:id="@+id/profile_education_textv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Educational Attainment"
                            android:textSize="@dimen/text_small"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"/>

                        <LinearLayout
                            android:id="@+id/profile_layout_list_educational_attainment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>


                    </LinearLayout>

                </ScrollView>

                <ScrollView
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_txtv_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Ratings: 0/1"/>

                        <ListView
                            android:id="@+id/profile_listv_ratings"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </ScrollView>

            </FrameLayout>
        </LinearLayout>
    </TabHost>


</androidx.constraintlayout.widget.ConstraintLayout>